# LinuxApplicationDevelopment2023

./: .gitignore
01_TerminalProject/: Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  range2.gdb  range3.gdb
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  protected_remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  bisect.c
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  lab.c
10_Testing/: configure.ac
10_Testing/src/: Makefile.am  cvector.h  libcvector.c
10_Testing/tests/: Makefile.am  tests.c
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac
11_Documenting/po/: POTFILES.in  ru.po
11_Documenting/src/: bisect.c
